--- a/BricksTwitchBot/BricksTwitchBot.csproj
+++ b/BricksTwitchBot/BricksTwitchBot.csproj
@@ -84,9 +84,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Globals.cs" />
-    <Compile Include="IrcClient\DataHandler.cs" />
-    <Compile Include="IrcClient\IrcClient.cs" />
-    <Compile Include="IrcClient\MessageHandler.cs" />
+    <Compile Include="Irc\DataHandler.cs" />
+    <Compile Include="Irc\IrcClient.cs" />
+    <Compile Include="Irc\MessageHandler.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
