--- a/BricksTwitchBot/BricksTwitchBot.csproj
+++ b/BricksTwitchBot/BricksTwitchBot.csproj
@@ -39,7 +39,7 @@
     <StartupObject>BricksTwitchBot.Startup</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>Images\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MahApps.Metro, Version=1.1.2.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
@@ -125,7 +125,7 @@
     <EmbeddedResource Include="Images\Admin.png" />
     <EmbeddedResource Include="Images\Broadcaster.png" />
     <EmbeddedResource Include="Images\GlobalModerator.png" />
-    <Resource Include="icon.ico" />
+    <EmbeddedResource Include="Images\icon.ico" />
     <EmbeddedResource Include="Images\Moderator.png" />
     <EmbeddedResource Include="Images\Staff.png" />
     <EmbeddedResource Include="Images\Subscriber.png" />
