Seperated Read and Write Irc Connections

--- a/BricksTwitchBot/TwitchBot.ini
+++ b/BricksTwitchBot/TwitchBot.ini
@@ -1,5 +1,5 @@
 ﻿[Options]
 Username = Username
-Oauth = oauth:asdasd234asd234ad234asds23
-ChannelToJoin = Channel To Join
-Auto-Connect = 0
+Oauth = oauth:totallyalegitoauth
+ChannelToJoin = None
+Auto-Connect = False
